@@ -2,9 +2,11 @@ API.txt: $Id$
 
 This file contains a log of changes to the API.
 API version 1.7.2
+  Allow Export UI to automatically have wizards by setting 'use wizard' => TRUE
   Moved the Panels Stylizer module into CTools so that the UI can be
     used to manage styles for modules other than Panels.
-
+  Introduce ctools_access_ruleset module for customizable access rulesets.
+  
 API version 1.7.1
   Introduce 'modal return' and 'ajax return' to wizard.inc to allow
     wizard owners to process their own ajax/modal output.
