@@ -41,6 +41,7 @@ Improve the "Edit panel" tab so that Panels Everywhere can use a different name 
 Allow Views to use their exposed filters as pane configuration. This is under the "Allow" settings in the Content pane display.
 #849418: "Custom" content type was accidentally losing context substitutions created when reusable custom content types went in.
 Moved Panels stylizer UI to CTools. If you use Panels Stylizer, be sure to update Panels at the same time.
+Introduce ctools_access_ruleset module for customizable access rulesets.
 
 ctools 6.x-1.6 (2010-Jun-1)
 ==============
